--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
+body{
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .App {
-  text-align: center;
+  
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    margin: 0 auto;
+    justify-content: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+    font-size: 16px;
+    border: none;
+    margin-bottom: 10px;
+    transition: all 0.3s ease;
+   
 }
+input:focus{
+    outline: none;
+    
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.input-wrapper{
+    width: 90%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.underline{
+    border-bottom: 2px solid #4639b6;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.buttonAdd {
+    border: none;
+    cursor: pointer;
+    font-size: 40px;
+    color: #4639b6;
+    margin-bottom: 35px;
+    transition: all 0.3s ease;
+    background: none;
+}
+.buttonAdd:hover {
+    color: #4236ad;
+    rotate: 90deg;
+    
+}
+ul{
+    padding: 0;
+}
+li{
+    list-style-type: none ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    transition: all 0.3s ease;
+    border-radius: 5px;
+}
+li:hover{
+    
+   box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.15);
+}
+.todoItem{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+input[type="checkbox"] {
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  margin: 0;
+}
+.done {
+  text-decoration: line-through;
+  color: gray;
+}
+.buttonRemove{
+    color: rgb(220, 41, 41);
+    border: none;
+    background: none;
+    rotate: 45deg;
+    font-size: 35px;
+    transition: all 0.3s ease ;
+}
+.buttonRemove:hover{
+    color: rgb(186, 25, 25);
+    transform: scale(1.1);
+    rotate: 135deg;
+}
+.buttonClear{
+    background-color: #4639b6;
+    color: white;
+    width: 200px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.buttonClear:hover {
+    background-color: #3b309d;
 }
